--- a/Oblig2-Angular/src/styles.css
+++ b/Oblig2-Angular/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  padding-top: 4.5rem;
+}
+.pointer {
+  cursor: pointer;
+}
+
+.arrow {
+  cursor: default;
+}
