--- a/Oblig2-Angular/src/app/login/login.html
+++ b/Oblig2-Angular/src/app/login/login.html
@@ -1,18 +1,18 @@
 <div class="container">
   <a class="btn btn-secondary">Back</a>
-  <form class="form">
+  <form class="form" [formGroup]="form" (ngSubmit)="login()">
     <div class="form-group">
       <label for="username">Username</label>
-      <input type="text" id="username" onchange="validateUsername(this.value)" />
-      <span id="errUser" style="color:red;"></span>
+      <input class="form-control" formControlName="username" />
+      <span *ngIf="this.form.controls['username'].status=='INVALID'" style="color:red;">Username</span>
     </div>
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="password" id="password" onchange="validatePassword(this.value)" />
-      <span id="errPass" style="color:red;"></span>
+      <input class="form-control" formControlName="password" />
+      <span *ngIf="this.form.controls['password'].status == 'INVALID'" style="color:red;">Password</span>
     </div>
     <div class="form-group">
-      <button type="button" class="btn btn-primary">Log in</button>
+      <button type="submit" class="btn btn-primary">Log in</button>
     </div>
     <span id="err" style="color:red;"></span>
   </form>
