Added a few test routing sites and a check for islogggedin. Will now move to rest api

--- a/Oblig2-Angular/src/app/meny/meny.html
+++ b/Oblig2-Angular/src/app/meny/meny.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-    <div class="container align-items-center">
+    <div class="container">
       <a class="navbar-brand" routerLink="/">Disease Calculator</a>
       <button class="navbar-toggler"
               type="button"
@@ -15,7 +15,10 @@
            [ngClass]="{ show: isExpanded }">
         <ul class="navbar-nav flex-grow">
           <li class="nav-item">
-            <a class="nav-link text-dark" routerLink="/">Login</a>
+            <a class="nav-link text-dark" routerLink="/login">Login</a>
+          </li>
+          <li class="nav-item" [hidden]="session">
+            <a class="nav-link text-dark" routerLink="/login">Login</a>
           </li>
         </ul>
       </div>
