--- a/Oblig2-Angular/src/app/meny/meny.html
+++ b/Oblig2-Angular/src/app/meny/meny.html
@@ -17,8 +17,11 @@
           <li class="nav-item">
             <a class="nav-link text-dark" routerLink="/login">Login</a>
           </li>
-          <li class="nav-item" [hidden]="session">
-            <a class="nav-link text-dark" routerLink="/login">Login</a>
+          <li class="nav-item" [hidden]="!session">
+            <a class="nav-link text-dark" (click)="logout()" routerLink="/">LogOut</a>
+          </li>
+          <li class="nav-item" [hidden]="!session">
+            <a class="nav-link text-dark" routerLink="/diseaselist">Admin</a>
           </li>
         </ul>
       </div>
