Added error handling to tables

--- a/Oblig2-Angular/src/app/components/diseasetable/diseasetable.component.html
+++ b/Oblig2-Angular/src/app/components/diseasetable/diseasetable.component.html
@@ -23,4 +23,7 @@
             </ng-container>
         </tbody>
     </table>
+    <ng-container *ngIf="error">
+        {{error}}
+    </ng-container>
 </div>
