--- a/Oblig2-Angular/src/app/pages/diseaselist/diseaselist.component.html
+++ b/Oblig2-Angular/src/app/pages/diseaselist/diseaselist.component.html
@@ -9,5 +9,6 @@
 </app-searchbar>
 
 <app-diseasetable [vm]="diseases$ | async"
+                  [error]="errorMessage$ | async"
                   (clickDeleteDisease)="deleteDisease($event)">
 </app-diseasetable>
