--- a/Oblig2-Angular/src/app/components/symptomsubpage/symptomsubpage.component.html
+++ b/Oblig2-Angular/src/app/components/symptomsubpage/symptomsubpage.component.html
@@ -7,7 +7,8 @@
 <app-searchbar [placeholder]="searchPlaceholder"
                [label]="searchLabel"
                (clickSearch)="search($event)"
-               (clickClear)="clearSearch()">
+               (clickClear)="clearSearch()"
+               (search$)="search($event)">
 </app-searchbar>
 
 <app-symptomstable [symptoms]="symptoms$ | async"
