--- a/Oblig2-Angular/src/app/components/selectedsymptoms/selectedsymptoms.component.html
+++ b/Oblig2-Angular/src/app/components/selectedsymptoms/selectedsymptoms.component.html
@@ -1,11 +1,8 @@
 <div class="mb-3" *ngIf="selectedSymptoms">
     <div *ngIf="selectedSymptoms.length > 0" class="p-3 border border-top-0 rounded-bottom bg-light">
         <h6>Selected symptoms (click to deselect)</h6>
-        <app-button *ngFor="let symptom of selectedSymptoms"
-                    text="{{symptom.name}}"
-                    bootstrapClasses="btn btn-lg btn-primary m-1"
-                    iconClasses="bi bi-trash text-light"
-                    (btnClick)="removeSymptom(symptom)">
-        </app-button>
+        <button *ngFor="let symptom of selectedSymptoms" class="btn btn-lg btn-primary m-1" (click)="removeSymptom(symptom)">
+            {{symptom.name}} <i class="bi bi-trash text-light"></i>
+        </button>
     </div>
 </div>
