--- a/Oblig2-Angular/src/app/meny/meny.html
+++ b/Oblig2-Angular/src/app/meny/meny.html
@@ -15,13 +15,16 @@
            [ngClass]="{ show: isExpanded }">
         <ul class="navbar-nav flex-grow">
           <li class="nav-item">
-            <a class="nav-link text-dark" routerLink="/login">Login</a>
+            <a class="nav-link" routerlink="/">Home</a>
           </li>
-          <li class="nav-item" [hidden]="!session">
-            <a class="nav-link text-dark" (click)="logout()" routerLink="/">LogOut</a>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/diseaselist">Disease list</a>
           </li>
-          <li class="nav-item" [hidden]="!session">
-            <a class="nav-link text-dark" routerLink="/diseaselist">Admin</a>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/save">Save new disease</a>
+          </li>
+          <li>
+            <a class="nav-link" routerLink="/login">Login</a>
           </li>
         </ul>
       </div>
