--- a/Oblig2-Angular/src/app/components/diseasetable/diseasetable.component.html
+++ b/Oblig2-Angular/src/app/components/diseasetable/diseasetable.component.html
@@ -2,7 +2,7 @@
     <table class="table">
         <thead>
             <tr>
-                <th scope="col">Id</th>
+                <th scope="col" class="col-1">Id</th>
                 <th scope="col">Name</th>
                 <th scope="col">Symptoms</th>
                 <th></th>
@@ -14,10 +14,15 @@
                     <td scope="row">{{disease.id}}</td>
                     <td>{{disease.name}}</td>
                     <td>{{disease.symptoms.join(", ")}}</td>
-                    <td>
+                    <td *ngIf="loggedIn">
                         <a class="link" [routerLink]="['/disease-details/', disease.id]">View</a> |
                         <a class="link" [routerLink]="['/edit-disease/', disease.id]">Edit</a> |
-                        <a class="link link-danger pointer" (click)="openModal(disease)">Delete</a>
+                        <a class="link link-danger" role="button" (click)="openModal(disease)">Delete</a>
+                    </td>
+                    <td *ngIf="!loggedIn">
+                        <a class="link" [routerLink]="['/disease-details/', disease.id]">View</a> |
+                        <span class="text-muted">Edit </span> |
+                        <span class="text-muted">Delete <small>(Requires login)</small></span>
                     </td>
                 </tr>
             </ng-container>
