Seperated form used in addpage and editpage into its own component

--- a/Oblig2-Angular/src/app/components/calculator/calculator.component.html
+++ b/Oblig2-Angular/src/app/components/calculator/calculator.component.html
@@ -1,6 +1,6 @@
 <header class="mb-3">
     <h1 class="pb-2">Symptomkalkulator</h1>
-    <p class="col-lg-6 col-sm-12">
+    <p class="col">
         Select one or more symptoms from the symptoms table below. Diseases with all the selected symptoms will be shown automatically.
         Click on a selected symptom to deselect it. You may also search for symptoms by name.
     </p>
